[package]
name = "dotenv"
version = "0.1.0"
edition = "2021"
authors = ["Johann Homonnai <j.homonnai@icloud.com>"]
description = "Runs a command with env loaded from file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15.7"
